--- a/distribute-lock-support/distribute-lock-redis-support/pom.xml
+++ b/distribute-lock-support/distribute-lock-redis-support/pom.xml
@@ -3,25 +3,33 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>distribute-lock</artifactId>
+        <artifactId>distribute-lock-support</artifactId>
         <groupId>io.github.weipeng2k</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <description>分布式锁：redis实现</description>
 
-    <artifactId>lettuce-sample</artifactId>
-    <name>lettuce-sample</name>
-    <description>生菜🥬，Redis客户端</description>
+    <artifactId>distribute-lock-redis-support</artifactId>
+    <name>distribute-lock-redis-support</name>
 
     <dependencies>
         <dependency>
             <groupId>io.lettuce</groupId>
             <artifactId>lettuce-core</artifactId>
         </dependency>
-        <!-- TEST -->
+        <dependency>
+            <groupId>io.github.weipeng2k</groupId>
+            <artifactId>distribute-lock-spi</artifactId>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.weipeng2k</groupId>
+            <artifactId>distribute-lock-client</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
