--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>distribute-lock-client</module>
         <module>distribute-lock-spi</module>
         <module>distribute-lock-support</module>
+        <module>distribute-lock-classic</module>
     </modules>
 
     <properties>
@@ -23,6 +24,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring.boot.version>2.5.0</spring.boot.version>
+        <redisson.version>3.16.4</redisson.version>
     </properties>
 
     <dependencyManagement>
@@ -41,6 +43,12 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson</artifactId>
+                <version>${redisson.version}</version>
+            </dependency>
+
 
             <!-- Self Projects-->
             <dependency>
