feat(distribute-lock): add plugin: logging

--- a/distribute-lock-testsuite/distribute-lock-redis-testsuite/pom.xml
+++ b/distribute-lock-testsuite/distribute-lock-redis-testsuite/pom.xml
@@ -24,6 +24,10 @@
         </dependency>
         <dependency>
             <groupId>io.github.weipeng2k</groupId>
+            <artifactId>distribute-lock-logging-plugin</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.github.weipeng2k</groupId>
             <artifactId>distribute-lock-test-support</artifactId>
         </dependency>
         <dependency>
