--- a/distribute-lock-plugin/pom.xml
+++ b/distribute-lock-plugin/pom.xml
@@ -10,6 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <description>分布式锁：插件项目</description>
+    <modules>
+        <module>distribute-lock-logging-plugin</module>
+    </modules>
 
     <artifactId>distribute-lock-plugin</artifactId>
     <name>distribute-lock-plugin</name>
